TopJugadores y Estadisticas finalizado

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -75,41 +75,41 @@
                 <input type="hidden" name="idUsuario" th:value="${usuario.id}">
 
                 <button type="submit" style="border: none; background: none; padding: 0; cursor: pointer;">
-                    <img th:src="@{/img/logos-juegos/truco.png}" alt="Ir al juego de truco" style="width: 100%; height: 220px; background-size: cover; background-position: center;">
+                    <img th:src="@{/img/logos/logos-juegos/truco.png}" alt="Ir al juego de truco" style="width: 100%; height: 220px; background-size: cover; background-position: center;">
                 </button>
             </form>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/uno.png} + ')'">
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/uno.png} + ')'">
             <figcaption>UNO</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/la-oca.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/la-oca.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>La Oca</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/monopoly.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/monopoly.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Monopoly</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/batalla-naval.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/batalla-naval.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Batalla Naval</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/poker.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/poker.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Poker</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/ajedrez.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/ajedrez.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Ajedrez</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/tenis-de-mesa.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/tenis-de-mesa.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Tenis De Mesa</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/pool.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/pool.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Pool</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/bowling.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/bowling.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Bowling</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/bingo.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/bingo.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>Bingo</figcaption>
         </figure>
-        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos-juegos/juego-secreto.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/logos/logos-juegos/juego-secreto.png} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
             <figcaption>...</figcaption>
         </figure>
         <!-- Repite las demás figuras aquí -->
