--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -60,7 +60,7 @@
                             <p th:text="${estadistica.calcularNivel()}">Nivel</p>
                             <div class="d-flex flex-wrap gap-2">
                                 <p th:text="${'Jugadas: ' + estadistica.getJugadas()}">Partidas: 777</p>
-                                <p th:text="${'Ganadas: ' + estadistica.getGanadas()}">Ganadas: -777</p>
+                                <p th:text="${'Ganadas: ' + estadistica.getVictorias()}">Ganadas: -777</p>
                             </div>
                         </div>
                     </div>
