--- a/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
@@ -155,28 +155,69 @@
             </div>
 
             <!-- Estadísticas del juego -->
-            <div class="game-stats">
-                <h2>Mis Estadísticas</h2>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Juego</th>
-                        <th>Victorias</th>
-                        <th>Partidas Jugadas</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:if="${misEstadisticas == null}">
-                        <td colspan="3">No tienes estadísticas registradas.</td>
-                    </tr>
-                    <tr th:each="estadistica : ${misEstadisticas}">
-                        <td th:text="${estadistica.juego != null ? estadistica.juego : 'Sin datos'}"></td>
-                        <td th:text="${estadistica.ganadas != null ? estadistica.ganadas : 0}"></td>
-                        <td th:text="${estadistica.jugadas != null ? estadistica.jugadas : 0}"></td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div class="estadisticas-container">
+                <!-- Cabeceras -->
+                <div class="cabeceras">
+                    <div id="estadisticas-header" class="header active" onclick="toggleContent('estadisticas')">Estadísticas Globales</div>
+                    <div id="ultimas-partidas-header" class="header" onclick="toggleContent('ultimas-partidas')">Últimas Partidas</div>
+                </div>
+
+                <!-- Contenido Estadísticas Globales -->
+                <div id="estadisticas" class="content visible">
+                    <h2>Top 5 Jugadores</h2>
+                    <p class="aclaracion">G = Victorias</p>
+                    <p class="aclaracion">PJ = Partidas Jugadas</p>
+                    <p class="aclaracion">D = Derrotas</p>
+                    <div class="top-jugadores">
+                        <!-- Datos Dinámicos -->
+                        <div th:each="estadistica : ${topJugadores}">
+                            <div class="jugador">
+                                <img th:src="@{${estadistica.getUsuario().getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
+                                <span class="nombre" th:text="${estadistica.getUsuario().getNombreUsuario()}"></span>
+                                <span class="victorias" th:text="${estadistica.getGanadas()} + 'V'"></span>
+                                <span class="partidas" th:text="${estadistica.getJugadas()} + 'PJ'"></span>
+                                <span class="derrotas" th:text="${estadistica.getJugadas() - estadistica.getGanadas()} + 'D'"></span>
+                                <img class="division" th:src="@{${estadistica.getUrlNivel()}}" alt="division"/>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <div class="estadisticas-propias">
+                        <div class="mis-datos" th:if="${misEstadisticas != null}">
+                            <img th:src="@{${misEstadisticas.getUsuario().getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
+                            <span class="nombre" th:text="${misEstadisticas.getUsuario().getNombreUsuario()}"></span>
+                            <span class="victorias" th:text="${misEstadisticas.getGanadas()} + 'V'"></span>
+                            <span class="partidas" th:text="${misEstadisticas.getJugadas()} + 'PJ'"></span>
+                            <span class="derrotas" th:text="${misEstadisticas.getJugadas() - misEstadisticas.getGanadas()} + 'D'"></span>
+                            <img class="division" th:src="@{${misEstadisticas.getUrlNivel()}}" alt="division"/>
+                        </div>
+                        <div id="alt-text" th:if="${misEstadisticas == null}">
+                            <h3>Aún no tienes estadísticas.</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Contenido Últimas Partidas -->
+                <div id="ultimas-partidas" class="content">
+                    <h2>Últimas Partidas</h2>
+                    <div th:if="${partidas == null || partidas.isEmpty()}">
+                        <p>No hay partidas recientes.</p>
+                    </div>
+                    <div th:if="${partidas != null && !partidas.isEmpty()}" th:each="estadistica : ${topJugadores}">
+                        <img th:src="@{${usuario.getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
+                        <span class="nombre" th:text="${misEstadisticas.getUsuario().getNombreUsuario()}"></span>
+                        <span class="victorias" th:text="${misEstadisticas.getGanadas()} + 'V'"></span>
+                        <span class="partidas" th:text="${misEstadisticas.getJugadas()} + 'PJ'"></span>
+                        <span class="derrotas" th:text="${misEstadisticas.getJugadas() - misEstadisticas.getGanadas()} + 'D'"></span>
+                        <img class="division" th:src="@{${misEstadisticas.getUrlNivel()}}" alt="division"/>
+                        <p th:text="${'Partida ' + partida.id + ': ' + partida.id + ' - ' + partida.getPuntosParaGanar() + ' puntos - '}"></p>
+                    </div>
+
+                </div>
             </div>
+
         </div>
     </main>
 </div>
@@ -305,6 +346,49 @@
             }
         });
     }
+
+    // ESTADISTICAS
+    function toggleContent(tab) {
+        // Ocultar ambos contenidos
+        var estadisticasContent = document.getElementById('estadisticas');
+        var ultimasPartidasContent = document.getElementById('ultimas-partidas');
+        var estadisticasHeader = document.getElementById('estadisticas-header');
+        var ultimasPartidasHeader = document.getElementById('ultimas-partidas-header');
+
+        // Alternar entre las pestañas
+        if (tab === 'estadisticas') {
+            estadisticasContent.classList.add('visible');
+            ultimasPartidasContent.classList.remove('visible');
+            estadisticasHeader.classList.add('active');
+            ultimasPartidasHeader.classList.remove('active');
+        } else if (tab === 'ultimas-partidas') {
+            ultimasPartidasContent.classList.add('visible');
+            estadisticasContent.classList.remove('visible');
+            ultimasPartidasHeader.classList.add('active');
+            estadisticasHeader.classList.remove('active');
+        }
+    }
+
+    /* TOP DE JUGADORES */
+    document.addEventListener('DOMContentLoaded', () => {
+        const jugadoresContainer = document.querySelectorAll('.jugador');
+        const jugadores = Array.from(jugadoresContainer);
+
+        // Ordenar jugadores por victorias en orden descendente
+        jugadores.sort((a, b) => {
+            const victoriasA = parseInt(a.querySelector('.victorias').textContent.trim(), 10);
+            const victoriasB = parseInt(b.querySelector('.victorias').textContent.trim(), 10);
+            return victoriasB - victoriasA;
+        });
+
+        // Limitar a los primeros 5 jugadores
+        const container = document.querySelector('.top-jugadores');
+        container.innerHTML = ''; // Limpiar contenedor
+
+        jugadores.slice(0, 5).forEach(jugador => {
+            container.appendChild(jugador);
+        });
+    });
 </script>
 </body>
 </html>
