--- a/src/main/webapp/resources/core/css/menu-juego.css
+++ b/src/main/webapp/resources/core/css/menu-juego.css
@@ -374,79 +374,111 @@ input[type="radio"] {
 }
 
 
-/* Columnas */
-.columna {
-    flex: 1; /* Cada columna ocupa la misma proporción de espacio */
-    text-align: center; /* Centra el contenido */
-    padding: 0 10px; /* Espaciado interno */
-}
-
-/* Botón "Unirse" */
-.btn-success {
-    padding: 8px 15px;
-    color: #fff;
-    background-color: #28a745;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 14px;
-}
-
-.btn-success:hover {
-    background-color: #218838;
-}
-
-.game-stats {
+/* ESTADISTICAS Y ULTIMAS PARTIDAS */
+.estadisticas-container {
     width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+/* Cabeceras */
+.cabeceras {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    border-bottom: 3px solid transparent;
+    transition: all 0.3s ease;
 }
 
-.opciones {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    margin: 15px;
-    padding: 5px;
-    width: 100%;
-}
-
-.opcion1 {
-    border-bottom: 6px solid grey;
-    text-align: center;
-    width: 40%;
-}
-
-.opcion2 {
-    border-bottom: 6px solid transparent;
-    text-align: center;
-}
-
-table {
-    margin: 20px;
-    padding: 5px;
-    border-collapse: separate;
-    border-spacing: 10px 10px;
-    font-size: 18px;
-}
-
-th {
-    font-weight: bold;
-    padding: 12px;
-    text-align: center;
-    font-size: 25px;
-}
-
-td {
-    padding: 12px;
-    text-align: center;
-}
-
-a {
-    text-decoration: none;
+.header {
     cursor: pointer;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+}
+
+.header:hover {
+    color: #333;
+}
+
+.header.active {
+    border-bottom: 3px solid #333;  /* Línea bajo el texto activo */
+}
+
+/* Contenido */
+.content {
+    display: none;
+}
+
+.content.visible {
+    display: block;
+}
+
+/* Estilo de los jugadores */
+.top-jugadores {
+    margin-top: 20px;
+}
+
+.jugador {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.jugador .foto-perfil, .jugador .division {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.jugador .nombre {
+    font-size: 16px;
+    font-weight: bold;
+    flex-grow: 1;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.jugador .victorias, .jugador .partidas, .jugador .derrotas, .jugador
+.mis-datos .victorias, .mis-datos .partidas, .mis-datos .derrotas, .mis-datos{
+    font-size: 14px;
+    text-align: center;
+    padding: 0 10px;
+}
+
+.aclaracion {
+    margin: 1px;
+    font-size: small;
+    color: #666;
+}
+
+.estadisticas-propias {
+    margin-top: 15px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    justify-content: center;
+}
+
+#alt-text {
+    text-align: center;
+    justify-content: center;
+}
+
+hr {
+    margin-top: 15px;
+    width: 100%;
 }
