--- a/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
@@ -205,16 +205,51 @@
                     <div th:if="${partidas == null || partidas.isEmpty()}">
                         <p>No hay partidas recientes.</p>
                     </div>
-                    <div th:if="${partidas != null && !partidas.isEmpty()}" th:each="estadistica : ${topJugadores}">
-                        <img th:src="@{${usuario.getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
-                        <span class="nombre" th:text="${misEstadisticas.getUsuario().getNombreUsuario()}"></span>
-                        <span class="victorias" th:text="${misEstadisticas.getGanadas()} + 'V'"></span>
-                        <span class="partidas" th:text="${misEstadisticas.getJugadas()} + 'PJ'"></span>
-                        <span class="derrotas" th:text="${misEstadisticas.getJugadas() - misEstadisticas.getGanadas()} + 'D'"></span>
-                        <img class="division" th:src="@{${misEstadisticas.getUrlNivel()}}" alt="division"/>
-                        <p th:text="${'Partida ' + partida.id + ': ' + partida.id + ' - ' + partida.getPuntosParaGanar() + ' puntos - '}"></p>
+                    <div th:if="${partidas != null && !partidas.isEmpty()}" th:each="partida : ${partidas}">
+                        <div class="lista-partidas"
+                             th:style="${partida.getGanador().getUsuario().getId() == usuario.getId() ? 'background-color: #d4f7d4;' : (partida.getGanador() == null ? 'background-color: white;' : 'background-color: #f7d4d4;')}">
+                            <p class="id-partida" style="color: #666">Partida N:<span th:text="${partida.getId()}"></span></p>
+                            <div class="participantes">
+                                <!-- DATOS DEL JUGADOR 1 -->
+                                <div class="datos-j">
+                                    <img th:src="@{${partida.j1.usuario.getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
+                                    <span class="nombre" th:text="${partida.j1.usuario.getNombreUsuario()}"></span>
+                                    <span class="total" th:text="${partida.puntosJ1} + 'pts'" style="color: #666"></span>
+                                </div>
+                                <div class="resultado">
+                                    <!-- CHECK DERROTA -->
+                                    <div id="derrota" th:if="${partida.getGanador().getUsuario().id != usuario.getId()}" style="display: flex; align-items: center; justify-content: center; gap: 8px;">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-cross">
+                                            <!-- Círculo de fondo transparente -->
+                                            <circle cx="12" cy="12" r="10" fill="transparent" stroke="red" stroke-width="2"></circle>
+                                            <!-- Cruz roja -->
+                                            <path d="M15 9L9 15M9 9l6 6" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                        <span style="color: red">Derrota</span>
+                                    </div>
+                                    <!-- CHECK VICTORIA -->
+                                    <div id="victoria" th:if="${partida.getGanador().getUsuario().id == usuario.getId()}" style="display: flex; align-items: center; justify-content: center; gap: 8px;">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 24 24" fill="none" stroke="#fff" class="circle-check">
+                                            <!-- Círculo de fondo transparente -->
+                                            <circle cx="12" cy="12" r="10" fill="transparent" stroke="green" stroke-width="2"></circle>
+                                            <!-- Check verde -->
+                                            <path d="M9 12l2 2l4-4" stroke="green" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                        <span style="color: green">Victoria</span>
+                                    </div>
+                                </div>
+                                <!-- DATOS DEL JUGADOR 2 -->
+                                <div class="datos-j">
+                                    <img th:src="@{${partida.j2.usuario.getUrlFotoPerfil()}}" alt="Foto de {jugador.nombre}" class="foto-perfil">
+                                    <span class="nombre" th:text="${partida.j2.usuario.getNombreUsuario()}"></span>
+                                    <span class="total" th:text="${partida.puntosJ2} + 'pts'" style="color: #666"></span>
+                                </div>
+                            </div>
+                            <span class="ganador" th:text="'Ganador: ' + ${partida.getGanador().getUsuario().getNombreUsuario()}" style="color: #666"></span>
+                            <span class="puntos" th:text="'Puntos para ganar: ' + ${partida.puntosParaGanar}" style="color: #666"></span>
+                            <span style="display: none" th:text="${partida.getGanador().getUsuario().getId()}"></span>
+                        </div>
                     </div>
-
                 </div>
             </div>
 
@@ -389,6 +424,8 @@
             container.appendChild(jugador);
         });
     });
+
+    /* BRILLO EN JUGADORES HISTORIAL */
 </script>
 </body>
 </html>
