Salas fixed y footer

--- a/src/main/webapp/resources/core/css/menu-juego.css
+++ b/src/main/webapp/resources/core/css/menu-juego.css
@@ -202,6 +202,7 @@ article svg {
     text-align: center;
     transition: all 0.3s ease;
     box-shadow: none;
+    text-decoration: none;
 }
 
 .styledBtn:hover, #puntosFiltro:hover {
