--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -75,14 +75,17 @@
             </div>
             <!-- INFORMACION  -->
             <div class="col-4 d-flex flex-column justify-content-center align-items-center bor3">
+
                 <div th:if="${partida != null}">
                     <p class="text-warning" th:if="${partida.getJ1() == null || partida.getJ2() == null}" th:text="${'Falta un jugador'}"></p>
                 </div>
-                <div th:if="${ganador != null}">
+
+                <div th:if="${ganador != null}" class="d-flex flex-column justify-content-center align-items-center">
                     <p>Ganó <strong th:text="${ganador.getNombre()}"></strong>!</p>
                     <a class="btn btn-danger"
                        th:href="@{/salir(mano=${mano.id})}">Salir</a>
                 </div>
+
                 <div th:if="${ganador == null}">
                     <p th:if="${misPuntos != null && yo != null}"
                        th:text="${'(yo): ' + yo.nombre + ' ' + misPuntos}"></p>
