--- a/src/main/webapp/resources/core/css/modificar-perfil.css
+++ b/src/main/webapp/resources/core/css/modificar-perfil.css
@@ -14,6 +14,10 @@ p, span {
     font-style: normal;
 }
 
+main{
+    background-color: #EEE;
+}
+
 /* HEADER */
 header {
     width: 100%;
@@ -22,20 +26,20 @@ header {
     top: 0;
     z-index: 1;
     display: flex;
-    justify-content: center; /* Centra horizontalmente el contenido */
-    align-items: center; /* Centra verticalmente el contenido */
-    background-color: #f5f5f5; /* Fondo claro para destacar */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+    justify-content: center;
+    align-items: center;
+    background-color: #EEE;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 header > div {
     width: 100%;
-    max-width: 1200px; /* Ajusta el ancho máximo del contenedor */
+    max-width: 1200px;
     height: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Espaciado entre elementos */
+    justify-content: space-between;
     position: relative;
 }
 
@@ -44,14 +48,14 @@ header > div {
     font-family: "Kumar One Outline", system-ui;
     font-size: 2rem;
     text-align: center;
-    color: #333; /* Texto en color oscuro para contraste */
+    color: #333;
     margin: 0;
-    flex: 1; /* Ocupa el espacio disponible */
+    flex: 1;
 }
 
 /* Botón de cerrar sesión */
 header .logout-btn {
-    background-color: #d9534f; /* Rojo para destacar el botón */
+    background-color: #d9534f;
     color: #fff;
     padding: 0.5rem 1rem;
     border: none;
@@ -62,7 +66,7 @@ header .logout-btn {
 }
 
 header .logout-btn:hover {
-    background-color: #c9302c; /* Cambia a un rojo más oscuro al pasar el mouse */
+    background-color: #c9302c;
 }
 
 /* Ícono de usuario */
