--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -42,7 +42,7 @@
         <!-- MESA CENTRAL -->
         <div id="cartas-en-juego" class="d-flex flex-wrap order-1">
             <!-- MAZO -->
-            <div th:if="${partidaIniciada != null && partidaIniciada}" class="col-4 bor1">
+            <div th:if="${partidaIniciada != null && partidaIniciada}" class="col-4">
                 <a th:href="@{/comenzar-truco(idPartida= ${idPartida})}" th:if="${ganador == null}" class="w-100">
                     <img class="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                 </a>
@@ -163,7 +163,7 @@
         </div>
     </div>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const cartas = document.querySelectorAll('.carta');
