Eliminar sesiones / Error al empezar partida (solucionar)

--- a/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menu-juego.html
@@ -148,7 +148,7 @@
                             <p th:text="${'Puntos: ' + partida.getPuntosParaGanar()}"></p>
                         </div>
                         <div class="sala-boton">
-                            <a class="styledBtn" th:href="@{/unirse(idJugador=${usuario.getId()}, idPartida=${partida.getId()})}">Unirse</a>
+                            <a class="styledBtn" th:href="@{/unirse(idPartida=${partida.getId()}, idUsuario=${usuario.getId()})}">Unirse</a>
                         </div>
                     </div>
                 </div>
