--- a/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/amigos.html
@@ -114,7 +114,7 @@
                             <h2 class="profile-user-handle" th:text="${recomendado.nombreUsuario}"></h2>
                             <small class="descripcion" th:text="${recomendado.descripcion != null ? '&quot;' + recomendado.descripcion + '&quot;' : '&quot; Sin descripción. &quot;'}"></small>
                             <div class="profile-actions">
-                                <button class="btn">Agregar amigo</button>
+                                <a th:href="@{/agregar-amigo(idAmigo=${recomendado.id}, idUsuario=${usuarioActual.id})}" class="btn">Agregar amigo</a>
                             </div>
                         </div>
                     </div>
